# lab06

./: .travis.yml  CMakeLists.txt  README.md
_build/: CTestTestfile.cmake  Makefile  check
_build/Testing/Temporary/: CTestCostData.txt
tests/: main.cpp
